console_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "50"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"console","namespace":"console-system"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"console","hypercloud":"ui"}},"template":{"metadata":{"labels":{"app":"console","hypercloud":"ui"},"name":"hypercloud-ui"},"spec":{"containers":[{"args":["--pwd=/var/tmp/configs/"],"command":["/manager"],"image":"tmaxcloudck/console-operator:@@OPERATOR-VER@@","name":"manager","volumeMounts":[{"mountPath":"/var/tmp/conf [...]
  creationTimestamp: "2021-03-03T05:17:40Z"
  generation: 59
  managedFields:
    - apiVersion: apps/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:spec:
          f:progressDeadlineSeconds: {}
          f:revisionHistoryLimit: {}
          f:selector:
            f:matchLabels:
              .: {}
              f:app: {}
              f:hypercloud: {}
          f:strategy:
            f:rollingUpdate:
              .: {}
              f:maxSurge: {}
              f:maxUnavailable: {}
            f:type: {}
          f:template:
            f:metadata:
              f:labels:
                .: {}
                f:app: {}
                f:hypercloud: {}
              f:name: {}
            f:spec:
              f:containers:
                k:{"name":"console"}:
                  .: {}
                  f:imagePullPolicy: {}
                  f:name: {}
                  f:ports: {}
                  f:resources: {}
                  f:terminationMessagePath: {}
                  f:terminationMessagePolicy: {}
                  f:volumeMounts:
                    .: {}
                    k:{"mountPath":"/etc/localtime"}:
                      .: {}
                      f:mountPath: {}
                      f:name: {}
                      f:readOnly: {}
                    k:{"mountPath":"/etc/timezone"}:
                      .: {}
                      f:mountPath: {}
                      f:name: {}
                      f:readOnly: {}
                    k:{"mountPath":"/opt/bridge/configs"}:
                      .: {}
                      f:mountPath: {}
                      f:name: {}
                    k:{"mountPath":"/var/https-cert"}:
                      .: {}
                      f:mountPath: {}
                      f:name: {}
                      f:readOnly: {}
                k:{"name":"manager"}:
                  .: {}
                  f:args: {}
                  f:command: {}
                  f:imagePullPolicy: {}
                  f:name: {}
                  f:resources: {}
                  f:terminationMessagePath: {}
                  f:terminationMessagePolicy: {}
                  f:volumeMounts:
                    .: {}
                    k:{"mountPath":"/var/tmp/configs"}:
                      .: {}
                      f:mountPath: {}
                      f:name: {}
              f:dnsPolicy: {}
              f:restartPolicy: {}
              f:schedulerName: {}
              f:securityContext: {}
              f:serviceAccount: {}
              f:serviceAccountName: {}
              f:terminationGracePeriodSeconds: {}
              f:volumes:
                .: {}
                k:{"name":"dynamic-config"}:
                  .: {}
                  f:emptyDir:
                    .: {}
                    f:medium: {}
                  f:name: {}
                k:{"name":"https-cert"}:
                  .: {}
                  f:name: {}
                  f:secret:
                    .: {}
                    f:defaultMode: {}
                    f:secretName: {}
                k:{"name":"localtime"}:
                  .: {}
                  f:hostPath:
                    .: {}
                    f:path: {}
                    f:type: {}
                  f:name: {}
                k:{"name":"timezone"}:
                  .: {}
                  f:hostPath:
                    .: {}
                    f:path: {}
                    f:type: {}
                  f:name: {}
      manager: kubectl-client-side-apply
      operation: Update
      time: "2021-03-26T06:55:51Z"
    - apiVersion: apps/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          f:replicas: {}
      manager: Mozilla
      operation: Update
      time: "2021-05-12T10:29:22Z"
    - apiVersion: apps/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          f:template:
            f:spec:
              f:containers:
                k:{"name":"console"}:
                  f:command: {}
                  f:image: {}
                  f:ports:
                    k:{"containerPort":80,"protocol":"TCP"}:
                      .: {}
                      f:containerPort: {}
                      f:protocol: {}
                    k:{"containerPort":443,"protocol":"TCP"}:
                      .: {}
                      f:containerPort: {}
                      f:protocol: {}
                k:{"name":"manager"}:
                  f:image: {}
      manager: kubectl-edit
      operation: Update
      time: "2021-05-12T11:49:04Z"
    - apiVersion: apps/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            f:deployment.kubernetes.io/revision: {}
        f:status:
          f:availableReplicas: {}
          f:conditions:
            .: {}
            k:{"type":"Available"}:
              .: {}
              f:lastTransitionTime: {}
              f:lastUpdateTime: {}
              f:message: {}
              f:reason: {}
              f:status: {}
              f:type: {}
            k:{"type":"Progressing"}:
              .: {}
              f:lastTransitionTime: {}
              f:lastUpdateTime: {}
              f:message: {}
              f:reason: {}
              f:status: {}
              f:type: {}
          f:observedGeneration: {}
          f:readyReplicas: {}
          f:replicas: {}
          f:updatedReplicas: {}
      manager: kube-controller-manager
      operation: Update
      time: "2021-05-12T11:49:09Z"
  name: console
  namespace: console-system
  resourceVersion: "102774111"
  selfLink: /apis/apps/v1/namespaces/console-system/deployments/console
  uid: d6f938ee-90dd-4fed-bdba-266832b9917f
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: console
      hypercloud: ui
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: console
        hypercloud: ui
      name: hypercloud-ui
    spec:
      containers:
        - command:
            - /opt/bridge/bin/console
            - gateway
            - --public-dir=/opt/bridge/static
            - --listen=https://0.0.0.0:443
            - --base-address=https://0.0.0.0:443
            - --tls-cert-file=/var/https-cert/cert
            - --tls-key-file=/var/https-cert/key
            - --redirect-port=80
            - --keycloak-realm=tmax
            - --keycloak-auth-url=https://hyperauth.org/auth
            - --keycloak-client-id=ck-integration-hypercloud5
            - --grafana-endpoint=http://grafana.monitoring.svc:3000/api/grafana/
            - --kiali-endpoint=https://192.168.6.151/api/kiali/
            - --kibana-endpoint=http://kibana.kube-logging.svc.cluster.local:5601/api/kibana/
            - --managed-gitlab-url=http://gitlab-test-deploy.ck1-2.192.168.6.151.nip.io/
            - --mc-mode=true
            - --release-mode=true
          image: tmaxcloudck/hypercloud-console:5.0.9.4
          imagePullPolicy: Always
          name: console
          ports:
            - containerPort: 443
              protocol: TCP
            - containerPort: 80
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /var/https-cert
              name: https-cert
              readOnly: true
            - mountPath: /etc/localtime
              name: localtime
              readOnly: true
            - mountPath: /etc/timezone
              name: timezone
              readOnly: true
            - mountPath: /opt/bridge/configs
              name: dynamic-config
        - command:
            - /manager
          args:
            - --pwd=/var/tmp/configs/
          image: tmaxcloudck/console-operator:5.1.0.1
          imagePullPolicy: IfNotPresent
          name: manager
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /var/tmp/configs
              name: dynamic-config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: console-system-admin
      serviceAccountName: console-system-admin
      terminationGracePeriodSeconds: 30
      volumes:
        - name: https-cert
          secret:
            defaultMode: 288
            secretName: console-https-secret
        - hostPath:
            path: /etc/localtime
            type: ""
          name: localtime
        - hostPath:
            path: /etc/timezone
            type: ""
          name: timezone
        - emptyDir:
            medium: Memory
          name: dynamic-config
status:
  availableReplicas: 1
  conditions:
    - lastTransitionTime: "2021-05-10T07:45:22Z"
      lastUpdateTime: "2021-05-10T07:45:22Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2021-05-12T11:46:42Z"
      lastUpdateTime: "2021-05-12T11:49:09Z"
      message: ReplicaSet "console-6fb6b8449d" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
  observedGeneration: 59
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
