hypercloud-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: api-server-service-for-traefik
  namespace: hypercloud5-system
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: https
    name: https
  selector:
    hypercloud5: api-server
  sessionAffinity: None
  type: ClusterIP
