ingressroute.yaml
apiVersion: v1
items:
- apiVersion: traefik.containo.us/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.containo.us/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"name":"console-ingressroute","namespace":"console-system"},"spec":{"entryPoints":["websecure"],"routes":[{"kind":"Rule","match":"Host(`console.console-system`)","services":[{"name":"console","namespace":"console-system","passHostHeader":true,"port":433,"scheme":"https","sticky":{"cookie":{"httpOnly":true,"name":"cookie","sameSite":"none","secure":true}},"strategy":"RoundRobin"}]}],"tls":{"ins [...]
    creationTimestamp: "2021-09-01T02:17:26Z"
    generation: 15
    name: console-ingressroute
    namespace: console-system
    resourceVersion: "140550747"
    selfLink: /apis/traefik.containo.us/v1alpha1/namespaces/console-system/ingressroutes/console-ingressroute
    uid: 56978865-5708-455c-ab8f-df4c3bfcdbf4
  spec:
    entryPoints:
    - websecure
    routes:
    - kind: Rule
      match: Host(`console.console-system.traefik`)
      services:
      - name: console
        namespace: console-system
        passHostHeader: true
        port: 443
        scheme: https
    tls:
      insecureSkipVerify: true
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
